nesc-frontend/src/test/resources/integration/programs/bad/bad13/C.nc
/* Invalid assignment of a value of a generic type. */

configuration C
{
}
implementation
{
   components new M(int);
}
